--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,7 @@ spring.datasource.password=soder1989
 
 spring.jpa.show-sql=true
 
-allowed.origin=http://localhost:5500/
+allowed.origin=http://127.0.0.1:5500/
+
+server.servlet.session.cookie.secure=true
+server.servlet.session.cookie.http-only=true
